create models User and car

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # Bot
 bot.name=fellow_traveler_korolevo_bot
-bot.token=
+bot.token=5870707022:AAH86au2koiklBR_KMqIDLE23qj1WiipiuQ
 
 # DB properties
-spring.datasource.url=jdbc:postgresql://localhost/utility_bills
+spring.datasource.url=jdbc:postgresql://localhost/fellow_travel
 spring.datasource.username=postgres
 spring.datasource.password=123
 spring.datasource.driverClassName=org.postgresql.Driver
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
