remove @Deprecated getBotToken()

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Bot
 bot.name=fellow_traveler_korolevo_bot
-bot.token=5870707022:AAEr1m23aJSF0tjgBuoTj_NTTyN09vwSsgA
+bot.token=
 
 # DB properties
 spring.datasource.url=jdbc:postgresql://localhost/fellow_travel
