realization of User Registration  - Edit name

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Bot
 bot.name=fellow_traveler_korolevo_bot
-bot.token=
+#bot.token=
 
 # DB properties
 spring.datasource.url=jdbc:postgresql://localhost/fellow_travel
