--- a/pom.xml
+++ b/pom.xml
@@ -66,11 +66,11 @@
 <!--		</dependency>-->
 
 		<!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
-		<dependency>
-			<groupId>org.hibernate.validator</groupId>
-			<artifactId>hibernate-validator</artifactId>
-			<version>6.1.7.Final</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.hibernate.validator</groupId>-->
+<!--			<artifactId>hibernate-validator</artifactId>-->
+<!--			<version>6.1.7.Final</version>-->
+<!--		</dependency>-->
 
 
 		<dependency>
