--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.datasource.url=jdbc:postgresql://localhost/fellow_travel
 spring.datasource.username=postgres
 spring.datasource.password=123
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
