--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,13 @@ bot.name=fellow_traveler_korolevo_bot
 #bot.token=
 
 # DB properties
-spring.datasource.url=jdbc:postgresql://localhost/fellow_travel
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5435/fellow_travel
+#spring.datasource.url=jdbc:postgresql://localhost/fellow_travel
+#spring.datasource.username=postgres
+spring.datasource.username=ftdb_admin
 spring.datasource.password=123
 spring.datasource.driverClassName=org.postgresql.Driver
 #spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
 
