--- a/compose.yaml
+++ b/compose.yaml
@@ -17,10 +17,11 @@ services:
     restart: always
     ports:
       - 6379:6379
-    environment:
-      - REDIS_CONFIG=notify-keyspace-events Ehg
     volumes:
       - redis_volume:/var/lib/docker/volumes/redis_volume/_data
+    command:
+      --"notify-keyspace-events Ehg"
+
 volumes:
   fellow_travel_db:
     external: true
