--- a/compose.yaml
+++ b/compose.yaml
@@ -20,8 +20,8 @@ services:
     volumes:
       - redis_volume:/var/lib/docker/volumes/redis_volume/_data
     command:
-#      --"notify-keyspace-events EA"
-      --"notify-keyspace-events Ehg"
+      --"notify-keyspace-events EA"
+#      --"notify-keyspace-events Ehg"
 
 volumes:
   fellow_travel_db:
